--- a/sound_record_test.ipynb
+++ b/sound_record_test.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyaudio\n",
+    "import numpy\n",
+    "import wave     #wavファイルを扱うためのライブラリ\n",
+    "import datetime\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -15,18 +28,14 @@
     }
    ],
    "source": [
-    "import pyaudio\n",
-    "import numpy\n",
-    "import wave     #wavファイルを扱うためのライブラリ\n",
-    "import datetime\n",
-    "\n",
     "dt_now = datetime.datetime.now()\n",
     "dt_now_time = dt_now.strftime('%Y%m%d%H%M%S')\n",
+    "Record_Duration = 2\n",
     "\n",
-    "WAVE_OUTPUT_FILENAME = \"normal/\"+dt_now_time+\"sample.wav\" #音声を保存するファイル名\n",
+    "WAVE_OUTPUT_FILENAME = \"abnormal/\"+dt_now_time+\"sample.wav\" #音声を保存するファイル名\n",
     "iDeviceIndex = 0 #録音デバイスのインデックス番号\n",
     "\n",
-    "def MakeWavFile(FileName = WAVE_OUTPUT_FILENAME, Record_Seconds = 2):\n",
+    "def MakeWavFile(FileName = WAVE_OUTPUT_FILENAME, Record_Seconds = Record_Duration):\n",
     "    chunk = 1024\n",
     "    FORMAT = pyaudio.paInt16\n",
     "    \n",
@@ -64,7 +73,7 @@
     "\n",
     "if __name__ is \"__main__\":\n",
     "    #WAVファイル作成, 引数は（ファイル名, 録音する秒数）\n",
-    "    MakeWavFile(WAVE_OUTPUT_FILENAME, Record_Seconds = 2) "
+    "    MakeWavFile(WAVE_OUTPUT_FILENAME, Record_Seconds = Record_Duration) "
    ]
   },
   {
